fixed media links, css align

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -18,16 +18,20 @@ h1 {
 class download_link {
   font-size: 16px;
   color: aquamarine;
+  text-align: center;
 }
 
 h2 {
   font-weight: 300;
   font-size: 42px;
+  text-align: center;
+  color: white;
 }
 
 h2 p {
   font-size: 21px;
   color: gray;
+  text-align: center;
 }
 
 footer p {
